UCF-APR2.4/ftr main/force-app/main/default/objects/Wire_Center__c/Wire_Center__c.object-meta.xml
<CustomObject>
    <label>Wire Center</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wire Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>