UCF-APR2.4/ftr main/force-app/main/default/objects/Wire_Center__c/fields/CLLI__c.field-meta.xml
<CustomField>
    <fullName>CLLI__c</fullName>
    <description>CLLI code for the wire center, unique identifier for WC. Set this field as unique identifier of Wire Center</description>
    <externalId>true</externalId>
    <label>CLLI</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>