UCF-APR2.4/ftr main/force-app/main/default/objects/Wire_Center__c/fields/Cost_Per_Foot__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Foot__c</fullName>
    <description>Fiber building cost (with 2 decimal places) per foot for the given WC.</description>
    <label>Cost Per Foot</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>