UCF-APR2.4/ftr main/force-app/main/default/objects/Wire_Center__c/fields/Default_Pricing_Group__c.field-meta.xml
<CustomField>
    <fullName>Default_Pricing_Group__c</fullName>
    <label>Default Pricing Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pricing_Group</valueSetName>
    </valueSet>
</CustomField>