UCF-APR2.4/ftr main/force-app/main/default/objects/Wire_Center__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLLI__c</columns>
    <columns>Cost_Per_Foot__c</columns>
    <columns>Default_Pricing_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>